extends Control

var viewports = [
	"VBoxContainer/HBoxContainer/ViewportContainer1/Viewport1",
	"VBoxContainer/HBoxContainer/ViewportContainer2/Viewport2",
	"VBoxContainer/HBoxContainer2/ViewportContainer3/Viewport3",
	"VBoxContainer/HBoxContainer2/ViewportContainer4/Viewport4"
]

func _ready():
	pass
